--- a/fern/docs/pages/get-started/overview.mdx
+++ b/fern/docs/pages/get-started/overview.mdx
@@ -2,30 +2,4 @@
 title: Overview
 ---
 
-Welcome to the **Plant Store API**, your gateway to building robust, scalable solutions for plant stores of all sizes. Our API empowers developers to seamlessly integrate e-commerce functionality, manage plant inventory, and enhance customer experiences.
-
-## About Plant Store
-
-At **Plant Store**, we believe that plants have the power to transform spaces and lives. That's why we've built an advanced platform to help plant enthusiasts and businesses thrive. From local nurseries to large-scale online retailers, our tools provide everything needed to grow and manage a successful plant store.
-
-### Why Choose Plant Store?
-
-- **Industry Leader**: Trusted by thousands of plant retailers worldwide, Plant Store is the leading platform for all things green.
-- **Scalable Solutions**: Whether you're managing a boutique plant shop or a large online marketplace, our API scales effortlessly to meet your needs.
-- **Comprehensive Tools**: From inventory tracking to customer management, we provide the tools to help plant stores succeed.
-
-## Powerful API Features
-
-With the **Plant Store API**, you can:
-
-- **Integrate Plant Store with Any Platform**: Connect your plant store to websites, mobile apps, or custom tools.
-- **Automate Operations**: From inventory updates to order processing, automate routine tasks and save time.
-- **Enhance Customer Experience**: Provide personalized services, track customer preferences, and deliver real-time updates on orders.
-- **Boost Sales with Custom Promotions**: Create and manage promotions, discounts, and marketing campaigns to drive growth.
-
-Our API is designed for flexibility and ease of use, so you can focus on building unique and engaging solutions for your customers.
-
-
-## What's Next?
-
-Ready to get started? Learn more about the technical capabilities and how to use the Plant Store API in our [API Reference](/reference/endpoints) or jump straight to our [Quickstart Guide](/docs/get-started/quickstart).
+What is Jambonz and what are the key concepts?
