--- a/fern/docs/pages/resources/faqs.mdx
+++ b/fern/docs/pages/resources/faqs.mdx
@@ -3,13 +3,7 @@ title: FAQs
 ---
 
 <AccordionGroup>
-<Accordion title="Is the Plant Store available in my language?">
-The Plant Store is currently only available in English. Check the Release Notes for updates
-</Accordion>
-<Accordion title="How much does it cost to use the Plant Store?">
-The Plant Store has multiple pricing plans to meet your needs. For more information, [visit the Plant Store's pricing page](https://buildwithfern.com/). 
-</Accordion>
-<Accordion title="Why is my Plant Store not working?">
-Check the Plant Store's [status page](https://buildwithfern.com/) for any outages. 
+<Accordion title="Do you provide phone numbers">
+No, Jambonz is a Bring your Own carrier platform, so you are free to use it with the SIP providers that offer you the best rates, numbers and serivce in your market.
 </Accordion>
 </AccordionGroup>
