--- a/fern/docs/pages/resources/glossary.mdx
+++ b/fern/docs/pages/resources/glossary.mdx
@@ -1,22 +1,8 @@
 ---
 title: Glossary
-subtitle: Commonly used terms within the Plant Store
+subtitle: Commonly used terms with Jambonz
 ---
 
 | **Term**            | Description                                                                 |
 |---------------------|-----------------------------------------------------------------------------|
-| **Annual**           | A plant that completes its life cycle in one growing season.                |
-| **Perennial**        | A plant that lives for more than two years, often flowering annually.       |
-| **Evergreen**        | A plant that retains its leaves throughout the year, regardless of season.  |
-| **Deciduous**        | A plant that sheds its leaves annually during a specific season.            |
-| **Succulent**        | A plant with thick, fleshy parts adapted to store water.                    |
-| **Photosynthesis**   | The process by which plants use sunlight to produce energy from carbon dioxide and water. |
-| **Pollination**      | The transfer of pollen from one flower to another, enabling fertilization.  |
-| **Germination**      | The process by which a seed develops into a new plant.                      |
-| **Rhizome**          | A horizontal underground stem that sends out roots and shoots.              |
-| **Propagation**      | The process of growing new plants from seeds, cuttings, or other plant parts. |
-| **Compost**          | Organic material added to soil to help plants grow.                         |
-| **Mulch**            | A layer of material applied to the surface of soil to conserve moisture and improve fertility. |
-| **Pruning**          | The selective removal of plant parts to enhance growth or shape.            |
-| **Soil pH**          | A measure of the acidity or alkalinity of soil, affecting plant growth.     |
-| **Fertilizer**       | A substance that provides essential nutrients to plants to promote growth.  |
+| **CPaaS**           | Communications Platform as a Service                                        |
