--- a/fern/docs/pages/welcome.mdx
+++ b/fern/docs/pages/welcome.mdx
@@ -1,16 +1,23 @@
 ---
-title: The jambonz Developer Hub 
+title: Start building with jambonz
 layout: overview
 hide-feedback: true
 ---
 
-Welcome to jambonz. These pages guide you through core concepts and content of jambonz and its API.
+jambonz is the open-source telephony platform for deploying Voice AI applications at scale.
 
 <CardGroup cols={2}>
   <Card
-    title="Getting started"
+    title="Overview and Concepts"
     icon="fa-regular fa-play"
-    href="/docs/get-started/overview"
+    href="/docs/get-started/concepts"
+  >
+    Learn about jambonz in 5 minutes. 
+  </Card>
+    <Card
+    title="Developer Quickstart"
+    icon="fa-regular fa-play"
+    href="/docs/get-started/developer"
   >
     Start using jambonz in 5 minutes. 
   </Card>
@@ -19,20 +26,13 @@ Welcome to jambonz. These pages guide you through core concepts and content of j
     icon="fa-regular fa-file-lines"
     href="/docs/guides"
   >
-    Walk through tasks using the jambonz and its tooling. 
+    Explore all that jambonz can do for you. 
   </Card>
   <Card
-    title="API Reference"
-    icon="fa-regular fa-code"
-    href="/reference"
+    title="Self-hosted"
+    icon="fa-regular fa-server"
+    href="/docs/get-started/self-hosted"
   >
-    Learn about and use endpoints from the jambonz API. 
-  </Card>
-  <Card
-    title="Release Notes" 
-    icon="fa-regular fa-clock"
-    href="/release-notes"
-  >
-    Stay up to date with the latest from jambonz. 
+    Run your own jambonz system. 
   </Card>
 </CardGroup>
