--- a/fern/docs/pages/welcome.mdx
+++ b/fern/docs/pages/welcome.mdx
@@ -9,15 +9,15 @@ jambonz is the open-source telephony platform for deploying Voice AI application
 <CardGroup cols={2}>
   <Card
     title="Overview and Concepts"
-    icon="fa-regular fa-play"
-    href="/docs/get-started/concepts"
+    icon="fa-regular fa-head-side-brain"
+    href="/guides/get-started/basic-concepts"
   >
     Learn about jambonz in 5 minutes. 
   </Card>
     <Card
     title="Developer Quickstart"
     icon="fa-regular fa-play"
-    href="/docs/get-started/developer"
+    href="/guides/get-started/developer"
   >
     Start using jambonz in 5 minutes. 
   </Card>
