--- a/fern/docs/pages/speech/custom-speech.mdx
+++ b/fern/docs/pages/speech/custom-speech.mdx
@@ -9,8 +9,8 @@ Adding support for a new STT or TTS vendor requires you to implement a server pr
 
 Once you have added support for a new vendor, you can start using it immediately by logging into the jambonz portal and adding a new Speech service for that vendor.  You will specify the URL(s) that your server exposes as well as an api key that you create to secure the endpoint:
 
-![Creating custom STT vendor](/images/creating-custom-stt-vendor.png)
+![Creating custom STT vendor](../../assets/images/creating-custom-stt-vendor.png)
 
 Then, in the Application view simply select your custom vendor:
 
-![Selecting custom speech vendor](/images/using-custom-speech.png)
+![Selecting custom speech vendor](../../assets/images/using-custom-speech.png)
