client sdk pages

--- a/fern/docs/pages/sdks/index.mdx
+++ b/fern/docs/pages/sdks/index.mdx
@@ -15,21 +15,21 @@ Jambonz has a number of SDKs
   <Card
     title="Node.js Websocket Client SDK "
     icon="fa-regular fa-code"
-    href="/docs/sdks/nodeclientws"
+    href="/sdks/nodeclientws"
   >
     Our Node.js SDK for using with the Websocket API 
   </Card>
   <Card
     title="Node-RED"
     icon="fa-regular fa-code"
-    href="/docs/sdks/nodered"
+    href="/sdks/nodered"
   >
     A pacakge for the Node-RED Low Code platform
   </Card>
   <Card
     title="NPX Quickstarts" 
     icon="fa-regular fa-code"
-    href="/docs/sdks/nodered"
+    href="/sdks/npx"
   >
     Create a scaffold of an application from the command line 
   </Card>
