--- a/fern/docs/pages/verbs/answer.mdx
+++ b/fern/docs/pages/verbs/answer.mdx
@@ -5,8 +5,18 @@ The `answer` verb answers an incoming call by sending a SIP 200 OK.
   },
 ```
 
-> Note: it is not usually necessary to use the `answer` verb, as jambonz will automatically encounters the first verb that requires a media connection.  For instance, if your application starts with a `say` verb, then jambonz will automatically answer the call when it begins executing the `say` verb.  The `answer` verb is provided as a convenience for cases where you might want to, for example, answer the call and then pause (play silence) for a second or two while you backend system formulates an application.
-
 There are no attributes in the `answer` command.
+
+Note that it is not usually necessary to use the `answer` verb, as jambonz automatically answers the call 
+when it begins executing the first verb in the application that requires a media connection.
+
+For instance, if your application starts with a `say` verb, 
+then jambonz will automatically answer the call when it begins executing the `say` verb. 
+
+Sometimes, however, on  VoIP networks a caller may experience a phenomenum known as clipping, where the 
+leading part of the initial prompt is not heard because the prompt plays immediately on answer before 
+all downstream network elements have established the audio path.  In cases like these, it can be useful 
+to start your application with an `answer` verb followed by a `pause` of a second or so to stream silence.  
+
 
 
