--- a/fern/docs/pages/welcome.mdx
+++ b/fern/docs/pages/welcome.mdx
@@ -22,17 +22,17 @@ jambonz is the open-source telephony platform for deploying Voice AI application
     Start using jambonz in 5 minutes. 
   </Card>
   <Card
-    title="Guides"
+    title="Deployment Options"
     icon="fa-regular fa-file-lines"
-    href="/docs/guides"
+    href="/guides/get-started/deployment-options"
   >
-    Explore all that jambonz can do for you. 
+    Explore ways of accessing jambonz. 
   </Card>
   <Card
-    title="Self-hosted"
+    title="Support plans"
     icon="fa-regular fa-server"
-    href="/docs/get-started/self-hosted"
+    href="/guides/get-started/support-plans"
   >
-    Run your own jambonz system. 
+    Get support from the jambonz team. 
   </Card>
 </CardGroup>
