cleanup sdk pages

--- a/fern/docs/pages/sdks/index.mdx
+++ b/fern/docs/pages/sdks/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Client SDKs 
-layout: overview
+layout: page
 ---
 
 Jambonz has a number of SDKs
@@ -8,9 +8,9 @@ Jambonz has a number of SDKs
   <Card
     title="Node.js Client SDK "
     icon="fa-regular fa-code"
-    href="/docs/sdks/nodeclient"
+    href="/sdks/nodeclient"
   >
-    Our Node.js SDk for using with Webhooks and the REST API. 
+    Our Node.js SDK for using with Webhooks and the REST API. 
   </Card>
   <Card
     title="Node.js Websocket Client SDK "
@@ -24,7 +24,7 @@ Jambonz has a number of SDKs
     icon="fa-regular fa-code"
     href="/sdks/nodered"
   >
-    A pacakge for the Node-RED Low Code platform
+    A package for the Node-RED Low Code platform
   </Card>
   <Card
     title="NPX Quickstarts" 
