--- a/fern/docs/pages/sdks/nodeclient.mdx
+++ b/fern/docs/pages/sdks/nodeclient.mdx
@@ -1,3 +1,8 @@
+---
+title: Node.JS SDK
+layout: page
+---
+
 The jambonz Node.js SDK is one of the simplest and most powerful ways to build jambonz applications.  
 
 The video below provides a walk-through of how to create an application using the [create-jambonz-app](/docs/client-sdks/create-jambonz-app) utility, and then gives examples of building various webhooks applications that include collecting speech or dtmf input as well as integration with Google [Dialogflow](https://developers.google.com/learn/pathways/chatbots-dialogflow) and AWS [Lex V2](https://aws.amazon.com/blogs/aws/amazon-lex-enhanced-console-experience/).
