--- a/fern/docs/pages/sdks/nodered.mdx
+++ b/fern/docs/pages/sdks/nodered.mdx
@@ -1,3 +1,7 @@
+---
+title: Node-RED
+layout: page
+---
 
 To add the [jambonz plugins](https://flows.nodered.org/node/@jambonz/node-red-contrib-jambonz) for [Node-RED](https://nodered.org/) open Node-RED, click the hamburger menu at the top right, and then "Open Palette".
 
