--- a/fern/docs/pages/sdks/npx.mdx
+++ b/fern/docs/pages/sdks/npx.mdx
@@ -1,3 +1,7 @@
+---
+layout: page
+---
+
 # Create a new jambonz app
 
 The simplest way to create a new jambonz webhook or REST API application is to use create-jambonz-app. You’ll need to have Node >= 10.16 and npm >= 5.6 on your machine. To create a project, run:
